@@ -46,6 +46,9 @@ Configuration Variables
     <http://golang.org/pkg/time/#ParseDuration>`_. Default of 0 means no
     delay.
 
+- max_message_size (uint32):
+    The maximum size of the message that will be sent by heka-flood.
+
 - corrupt_percentage (float):
     The percentage of messages that will be randomly corrupted.
 
